--- a/MyWebSite/students/templates/students/Base.html
+++ b/MyWebSite/students/templates/students/Base.html
@@ -27,7 +27,7 @@
           <nav class="navbar navbar-inverse" >
             <div class="container-fluid">
               <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'index' %}">TCAV</a>
+                <a class="navbar-brand" href="{% url 'index' %}">Student Grade System</a>
               </div>
               <ul class="nav navbar-nav">
                 <!-- <li><a href="{% url 'students' %}">學生資料</a></li>
