--- a/MyWebSite/students/templates/students/Index.html
+++ b/MyWebSite/students/templates/students/Index.html
@@ -3,56 +3,7 @@
 {% block title %}index{% endblock %}
 
 {% block content %}
-<style>
-body {
-    font-family: "Lato", sans-serif;
-}
-
-.sidenav {
-    width: 130px;
-    position: fixed;
-    z-index: 1;
-    top: 10em;
-    left: 5px;
-    background: #eee;
-    overflow-x: hidden;
-    padding: 8px 0;
-}
-
-.sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #2196F3;
-    display: block;
-}
-
-.sidenav a:hover {
-    color: #064579;
-}
-
-.main {
-    margin-left: 140px; /* Same width as the sidebar + left position in px */
-    font-size: 28px; /* Increased text to enable scrolling */
-    padding: 0px 10px;
-}
-
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-}
-
-</style>
-
-    <h3>My exams</h3>
-
-<!-- Side navigation -->
-<div class="sidenav">
-    <a href="#">Exam1</a>
-    <a href="#">Exam2</a>
-    <a href="#">Exam3</a>
-  </div>
-  
+    <h3>Welecome to the Student Grade System!</h3>
 {% endblock %}
 
 
