modify student view

--- a/MyWebSite/students/templates/students/Base.html
+++ b/MyWebSite/students/templates/students/Base.html
@@ -52,7 +52,7 @@
               {% else %}
                 <ul class="nav navbar-nav navbar-right">
                   <li>
-                    <form action='/students/signin' method='get'>
+                    <form action='/students/signin/' method='get'>
                       <button class="btn btn-primary navbar-btn" type="submit">sign in</button>
                     </form>
                   </li>
