--- a/MyWebSite/students/templates/students/Visualizations.html
+++ b/MyWebSite/students/templates/students/Visualizations.html
@@ -33,13 +33,16 @@
             <a href="#" class="list-group-item list-group-item-action disabled">Cross-Exam Topic-Combination-Analysis</a>
         </nav>
     
-        <div id="visual" style="float:left;width:50%;height:20%;">
+        <!-- <div id="visual" style="float:left;width:50%;height:20%;">
             {{ figure|safe }}
             {{ figure_2|safe}}
             {{ figure_3|safe}}
             {{ figure_4|safe}}
             {{ figure_5|safe}}
             {{ figure_6|safe}}
+        </div> -->
+        <div id="visual" style="float:left;width:50%;height:15%;">
+            <img src="/i/eg_tulip.jpg"  alt="Question-based topic combination analysis" />
         </div>
     
         <div class="forms" style="float:left;width:35%;left:-50%;height:20%; bottom:35%">
